tests/ui/parser/issues/issue-49040.rs
#![allow(unused_variables)]; //~ ERROR expected item, found `;`
//~^ ERROR `main` function
fn foo() {}

// ferrocene-annotations: fls_8jb3sjqamdpu
// Program Entry Point
